# sdlp

./: .gitignore  2020 LG OLED l  The Black 4K HDR 60fps.f701.mp4.part  LV Sandals [CL39JYfOI-g].m4a  LV Sandals.webm  app.py  help_yt-dlp.txt  pyproject.toml  test.py
.github/workflows/: release.yml
core/: hook.py  logger.py
sdlp/: __init__.py  app.py
sdlp/core/: __init__.py  audio.py  thumbails.py  video.py
